[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.87"
hkdf = "0.12.3"
pbkdf2 = "0.12.2"
sha2 = "0.10.7"
base64 = "0.21.2"
cbc = { version = "0.1.2", features = ["block-padding", "alloc"] }
aes = "0.8.3"
hmac = "0.12.1"
